--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 </head>
 <body>
 <div class="container">
-    <div class="row mt-5">
+    <div class="row mt-2 mt-sm-4">
         <div class="col">
-
-            <h1><img src="pp.jpg" alt="avatar"> Losbang</h1>
+            <h1>Losbang</h1>
             <p>袋大丈夫</p>
         </div>
     </div>
