Add Behance link

--- a/index.html
+++ b/index.html
@@ -39,13 +39,18 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.twitch.tv/losbang">
-                        Twitch
+                    <a href="https://www.behance.net/losbang">
+                        Behance
                     </a>
                 </li>
                 <li>
                     <a href="https://www.instagram.com/losbang.cool">
                         Instagram
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.twitch.tv/losbang">
+                        Twitch
                     </a>
                 </li>
             </ul>
