Add Minimap link

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                     </a>
                 </li>
                 <li>
+                    <a href="https://minimap.net/user/lsbng">
+                        Minimap
+                    </a>
+                </li>
+                <li>
                     <a href="https://www.behance.net/losbang">
                         Behance
                     </a>
