--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
             </ul>
         </div>
     </div>
+    <div class="fixed-bottom text-center mb-2 mb-sm-4">
+        Made with <a href="https://www.youtube.com/watch?v=XgqTrvcAySA" class="text-decoration-none link-dark">♥</a> by me.
+    </div>
 </div>
 
 <!-- Bootstrap JS -->
