Add AniList link

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                     </a>
                 </li>
                 <li>
+                    <a href="https://anilist.co/user/losbang">
+                        AniList
+                    </a>
+                </li>
+                <li>
                     <a href="https://www.behance.net/losbang">
                         Behance
                     </a>
