--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/losbang.cool">
+                    <a href="https://www.instagram.com/losbang.earth">
                         Instagram
                     </a>
                 </li>
