--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
             font-family: 'Times New Roman', serif;
         }
     </style>
-    <title>losbang.cool</title>
+    <title>Losbang</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 <div class="container">
