--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="col">
             <ul>
                 <li>
-                    <a href="https://bsky.app/profile/losbang.cool">
+                    <a href="https://bsky.app/profile/losba.ng">
                         Bluesky
                     </a>
                 </li>
@@ -55,7 +55,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/losbang.earth">
+                    <a href="https://www.instagram.com/losba.ng">
                         Instagram
                     </a>
                 </li>
